# ResearchNinja

./: README.md  app.py  pyproject.toml  requirements.txt  sidebar.py
attached_assets/: Pasted-import-requests-from-bs4-import-BeautifulSoup-import-trafilatura-import-time-import-random-from-date-1742204404616.txt
backend/: __init__.py  ai_integration.py  api.py  export.py  scraper.py  utils.py
components/: business_viability.py  chat_interface.py  competitor_analysis.py  customer_analysis.py  market_research.py  regulatory_analysis.py  supply_chain.py  trend_analysis.py  visualization.py
utils/: __init__.py  api_validator.py  error_handler.py  integration_helper.py
