[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "docx>=0.2.4",
    "fastapi>=0.115.11",
    "google-search-results>=2.4.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "reportlab>=4.3.1",
    "streamlit>=1.43.2",
    "trafilatura>=2.0.0",
]
